# drake-ros

./: default.bazelrc
.github/workflows/: bazelized.yml  bazelized_drake_ros.yml  main.yml
bazel_ros2_rules/: README.md
bazel_ros2_rules/lib/: extensions.bzl
bazel_ros2_rules/lib/private/: ros_py.bzl
bazel_ros2_rules/ros2/: rosidl.bzl
drake_ros/: .bazelrc  MODULE.bazel
drake_ros/core/test/: test_geometry_conversions.cc
drake_ros_examples/: MODULE.bazel  README.md
ros2_example_bazel_installed/ros2_example_apps/: BUILD.bazel
ros2_example_bazel_installed/ros2_example_apps/test/: roslaunch_eg_launch_test.py  roslaunch_eg_node_launch_test.py
ros2_example_bazel_installed/ros2_example_common/: BUILD.bazel
ros2_example_bazel_installed/setup/: prereq-rosdep-keys.txt
setup/: install_prereqs
setup/assets/: drake-1.52.1-noble.tar.gz.sha256  drake-1.52.1-source.tar.gz.sha256
